--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-1вапыввып
-апап
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <!-- Название всего проекта -->
+  <title></title>
+  <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+</body>
+
+</html>
