--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
   <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
   <div class="page">
-    <header class="header">
-      <logo class="header__logo"></logo>
-      <p class="header__title">Научиться</p>
-      <p class="header__title">учиться</p>
-      <p class="header__end">Какие современные и эффективные подходы к обучению
-      вы можете использовать для своей жизни?<a>Узнать -</a></h3>
-      <img class=".header__image">
-      <img class="header__square-pic">
+    <header class="header flex-row ">
+      <div class="flex-column div justify-content-space-around">
+        <logo class="header__logo"></logo>
+        <p class="header__title_first">Научиться</p>
+        <p class="header__title_second">учиться</p>
+        <p class="header__end">Какие современные и эффективные подходы к обучению
+          вы можете использовать для своей жизни?<a>Узнать -</a></p>
+      </div>
+      <div>
+        <img class="header__image">
+        <img class="header__square-pic">
+      </div>
     </header>
     <main class="content">
       <section class="description">
@@ -52,4 +58,5 @@
     </footer>
   </div>
 </body>
+
 </html>
