--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 
 <body>
   <div class="page">
-    <header class="header flex-row ">
-      <div class="flex-column div justify-content-space-around">
-        <logo class="header__logo"></logo>
-        <p class="header__title_first">Научиться</p>
-        <p class="header__title_second">учиться</p>
+    <header class="header flex-row position-relative">
+      <div class="header__left flex-column justify-content-space-between border-content">
+        <div class="header__logo"></div>
+        <p class="header__title border-content">Научиться учиться</p>
         <p class="header__end">Какие современные и эффективные подходы к обучению
-          вы можете использовать для своей жизни?<a>Узнать -</a></p>
+          вы можете использовать для своей жизни?<a href="#" class="header__end_link"> Узнать ➝</a></p>
       </div>
-      <div>
-        <img class="header__image">
-        <img class="header__square-pic">
+      <div class="header__right">
+        <div class="header__image"></div>
+        <div class="header__square-pic"></div>
       </div>
     </header>
     <main class="content">
