--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="description"></div>
+        <div class="description__main">
+          <div class="flex-row">
+            <div>
+              <p class="description_brief">Главные проблемы в обучении</p>
+            </div>
+            <div class="flex-column description_main-text">
+              <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правилоьно изучать материал.
+                Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
+                чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+                Зубрежка быстро выветривается и не приносит пользы.
+              </p>
+              <p class="paragraph-span"><span class="span-solid">Вывод:</span> учиться тоже нужно уметь, но почему-то
+                этому мало где учат. Что с этим делать?</p>
+              <p class="paragraph">Конкретные техники и упражнения помогают изменить полход к обучению, сделать его
+                эффективным и захватывающим. Эти же техники применяются на примере обучения в
+                Практикуме.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
@@ -54,18 +73,22 @@
             </nav>
           </div>
           <div class="flex-column"></div>
-            <nav>
-              <title__footer class="title__footer">Соцсети</title__footer>
-              <ul class="text-style-2 no-bullets">
-                <li><a href="#" class="footer__link"><img src="images/facebook_color_white.svg" class="footer-image-overlay"/> Facebook</a></li>
-                <li><a href="#" class="footer__link"><img src="images/vk_color_white.svg" class="footer-image-overlay"/> Вконтакте</a></li>
-                <li><a href="#" class="footer__link"><img src="images/instagram_color_white.svg" class="footer-image-overlay"/> Instagram</a></li>
-              </ul>
-            </nav>
-          </div>
+          <nav>
+            <title__footer class="title__footer">Соцсети</title__footer>
+            <ul class="text-style-2 no-bullets">
+              <li><a href="#" class="footer__link"><img src="images/facebook_color_white.svg"
+                    class="footer-image-overlay" /> Facebook</a></li>
+              <li><a href="#" class="footer__link"><img src="images/vk_color_white.svg" class="footer-image-overlay" />
+                  Вконтакте</a></li>
+              <li><a href="#" class="footer__link"><img src="images/instagram_color_white.svg"
+                    class="footer-image-overlay" /> Instagram</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
-    </footer>
+  </div>
+  </footer>
   </div>
 </body>
+
 </html>
