--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <div class="page">
-    <!--<header class="header flex-row position-relative">
+    <header class="header flex-row position-relative">
       <div class="header__left flex-column justify-content-space-between">
         <div class="header__logo header__logo_header"></div>
         <p class="header__title">Научиться учиться</p>
         <p class="header__end text-style-3">Какие современные и эффективные подходы к обучению
-          вы можете использовать для своей жизни?<a href="#" class="header__end_link"> Узнать ➝</a></p>
+          вы можете использовать для своей жизни?<a href="#" class="link"> Узнать ➝</a></p>
       </div>
       <div class="header__right">
         <div class="header__image"></div>
@@ -44,68 +44,72 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="digits">
+        <div class="flex-column flex-center">
+          <section-title class="section-title-style">
+            <p>Цифры и факты</p>
+          </section-title>
+          <section-subtitle class="section-subtitle-style">
+            <p>Про учёбу и мозг</p>
+          </section-subtitle>
+          <div class="table-style flex-row">
+            <cell class="cell flex-column ">
+              <heading class="cell__heading">86 миллиардов</heading>
+              <text class="cell__text">Число нейронов в мозге человека</text>
+              <text class="cell__text"></text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">2,1 миллиарда</heading>
+              <text class="cell__text">Число нуждающихся в повышении квалификации</text>
+              <text class="cell__text">Всемирный Банк, 2017</text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">1000 терабайт</heading>
+              <text class="cell__text">Объём памяти человека</text>
+              <text class="cell__text"></text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">500 триллионов</heading>
+              <text class="cell__text">Число ответственных за обучение нервных синапсов
+                у взрослого человека</text>
+              <text class="cell__text_digits"></text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">420 миллионов</heading>
+              <text class="cell__text">Число взрослых людей моложе 25 лет, не имеющих образования
+                для трудоустройства</text>
+              <text class="cell__text">Всемирный Банк, 2017</text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">17-20 лет</heading>
+              <text class="cell__text">Пик обучаемости</text>
+              <text class="cell__text"></text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">1885 год</heading>
+              <text class="cell__text">Открытие кривой забывания</text>
+              <text class="cell__text"></text>
+            </cell>
+            <cell class="cell flex-column">
+              <heading class="cell__heading">1889 год</heading>
+              <text class="cell__text">Открытие условного рефлекса</text>
+              <text class="cell__text"></text>
+            </cell>
+          </div>
+        </div>
       </section>-->
 
-    <section class="digits">
-      <div class="flex-column flex-center">
-        <section-title class="section-title-style">
-          <p>Цифры и факты</p>
-        </section-title>
-        <section-subtitle class="section-subtitle-style">
-          <p>Про учёбу и мозг</p>
-        </section-subtitle>
-        <div class="table-style flex-row">
-          <cell class="cell flex-column ">
-            <heading class="cell__heading">86 миллиардов</heading>
-            <text class="cell__text">Число нейронов в мозге человека</text>
-            <text class="cell__text"></text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">2,1 миллиарда</heading>
-            <text class="cell__text">Число нуждающихся в повышении квалификации</text>
-            <text class="cell__text">Всемирный Банк, 2017</text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">1000 терабайт</heading>
-            <text class="cell__text">Объём памяти человека</text>
-            <text class="cell__text"></text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">500 триллионов</heading>
-            <text class="cell__text">Число ответственных за обучение нервных синапсов
-              у взрослого человека</text>
-            <text class="cell__text_digits"></text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">420 миллионов</heading>
-            <text class="cell__text">Число взрослых людей моложе 25 лет, не имеющих образования
-              для трудоустройства</text>
-            <text class="cell__text">Всемирный Банк, 2017</text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">17-20 лет</heading>
-            <text class="cell__text">Пик обучаемости</text>
-            <text class="cell__text"></text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">1885 год</heading>
-            <text class="cell__text">Открытие кривой забывания</text>
-            <text class="cell__text"></text>
-          </cell>
-          <cell class="cell flex-column">
-            <heading class="cell__heading">1889 год</heading>
-            <text class="cell__text">Открытие условного рефлекса</text>
-            <text class="cell__text"></text>
-          </cell>
-        </div>
-      </div>
-    </section>
+      <section class="feynman">
+        <section-title class="feynman-title">Метод Фейнмана</section-title>
+        <section-subtitle class="feynman-subtitle">Выучить и не забыть.</section-subtitle>
+        <section-info class="feynman-info"><a href="#" class="link">Подробнее ➝</a></section-info>
+        <div class="feynman-image"></div>
+      </section>
 
-    <section class="feynman">
-    </section>
-
-    <section class="kaufman">
-    </section>
+      <section class="kaufman">
+      </section>
     </main>
     <!--<footer class="footer">
       <div class="flex-row  footer__main">
