--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="page">
-    <header class="header flex-row position-relative">
+    <!--<header class="header flex-row position-relative">
       <div class="header__left flex-column justify-content-space-between">
         <div class="header__logo header__logo_header"></div>
         <p class="header__title">Научиться учиться</p>
@@ -99,17 +99,71 @@
             </cell>
           </div>
         </div>
-      </section>-->
+      </section>
 
-      <section class="feynman">
+    <section class="feynman">
+      <div class="feynman-main">
         <section-title class="feynman-title">Метод Фейнмана</section-title>
         <section-subtitle class="feynman-subtitle">Выучить и не забыть.</section-subtitle>
         <section-info class="feynman-info"><a href="#" class="link">Подробнее ➝</a></section-info>
         <div class="feynman-image"></div>
-      </section>
+      </div>
+    </section>-->
 
-      <section class="kaufman">
-      </section>
+    <section class="kaufman">
+      <div class="flex-column flex-center kaufman-main">
+        <section-title class="section-title-style">
+          <p>Принципы обучения</p>
+        </section-title>
+        <section-subtitle class="section-subtitle-style">
+          <p>от Джоша Кайфмана</p>
+        </section-subtitle>
+        <div class="table-style_dark flex-row">
+          <cell class="table__cell_theme_dark flex-column ">
+            <heading class="cell__heading">1</heading>
+            <text class="cell__text">Выберите привлекательный проект.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">2</heading>
+            <text class="cell__text">Сосредоточьтесь на каком-то одном навыке.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">3</heading>
+            <text class="cell__text">Определите целевой уровень мастерства.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">4</heading>
+            <text class="cell__text">Разбейте навык на элементы.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">5</heading>
+            <text class="cell__text">Приготовьте всё необходимое для занятий.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">6</heading>
+            <text class="cell__text">Устраните препятствия для занятий.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">7</heading>
+            <text class="cell__text">Выделите специальное время для занятий.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">8</heading>
+            <text class="cell__text">Создайте быстрые петли обратной связи.</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">9</heading>
+            <text class="cell__text">Занимайтесь по расписанию,
+              короткими интенсивными интервалами</text>
+          </cell>
+          <cell class="table__cell_theme_dark flex-column">
+            <heading class="cell__heading">10</heading>
+            <text class="cell__text">Уделяйте внимание количеству и скорости</text>
+            <div class="kaufman-triangle"></div>
+          </cell>
+        </div>
+      </div>
+    </section>
     </main>
     <!--<footer class="footer">
       <div class="flex-row  footer__main">
