complete first part

--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 
 <body>
   <div class="page">
-    <!--<header class="header flex-row position-relative">
-      <div class="header__left flex-column justify-content-space-between">
-        <div class="header__logo header__logo_header"></div>
-        <p class="header__title">Научиться учиться</p>
-        <p class="header__end text-style-3">Какие современные и эффективные подходы к обучению
+    <header class="header flex-row position-relative">
+      <div class="header__main_position_left flex-column justify-content-space-between">
+        <div class="header__logo header__logo_position"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__content text-style-3">Какие современные и эффективные подходы к обучению
           вы можете использовать для своей жизни?<a href="#" class="link"> Узнать ➝</a></p>
       </div>
-      <div class="header__right">
+      <div class="header__main_position_right">
         <div class="header__image"></div>
         <div class="header__square-pic"></div>
       </div>
     </header>
+
     <main class="content">
       <section class="description">
         <div class="description__main">
           <div class="flex-row">
             <div>
-              <p class="description_brief">Главные проблемы в обучении</p>
+              <h2 class="description__brief">Главные проблемы в обучении</h2>
             </div>
-            <div class="flex-column description_main-text">
+            <div class="flex-column description__main_text">
               <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правилоьно изучать материал.
                 Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
                 чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
                 Зубрежка быстро выветривается и не приносит пользы.
               </p>
-              <p class="paragraph-span"><span class="span-solid">Вывод:</span> учиться тоже нужно уметь, но почему-то
+              <p class="paragraph__span"><span class="paragraph__span_solid">Вывод:</span> учиться тоже нужно уметь, но
+                почему-то
                 этому мало где учат. Что с этим делать?</p>
               <p class="paragraph">Конкретные техники и упражнения помогают изменить полход к обучению, сделать его
                 эффективным и захватывающим. Эти же техники применяются на примере обучения в
@@ -47,125 +49,121 @@
       </section>
 
       <section class="digits">
-        <div class="flex-column flex-center">
-          <section-title class="section-title-style">
-            <p>Цифры и факты</p>
-          </section-title>
-          <section-subtitle class="section-subtitle-style">
-            <p>Про учёбу и мозг</p>
-          </section-subtitle>
+        <div class="flex-column digits__main">
+          <div class="section-title-style">
+            <h1>Цифры и факты</h1>
+          </div>
+          <div class="section-subtitle-style">
+            <h2>Про учёбу и мозг</h2>
+          </div>
           <div class="table-style flex-row">
-            <cell class="cell flex-column ">
-              <heading class="cell__heading">86 миллиардов</heading>
-              <text class="cell__text">Число нейронов в мозге человека</text>
-              <text class="cell__text"></text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">2,1 миллиарда</heading>
-              <text class="cell__text">Число нуждающихся в повышении квалификации</text>
-              <text class="cell__text">Всемирный Банк, 2017</text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">1000 терабайт</heading>
-              <text class="cell__text">Объём памяти человека</text>
-              <text class="cell__text"></text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">500 триллионов</heading>
-              <text class="cell__text">Число ответственных за обучение нервных синапсов
-                у взрослого человека</text>
-              <text class="cell__text_digits"></text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">420 миллионов</heading>
-              <text class="cell__text">Число взрослых людей моложе 25 лет, не имеющих образования
-                для трудоустройства</text>
-              <text class="cell__text">Всемирный Банк, 2017</text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">17-20 лет</heading>
-              <text class="cell__text">Пик обучаемости</text>
-              <text class="cell__text"></text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">1885 год</heading>
-              <text class="cell__text">Открытие кривой забывания</text>
-              <text class="cell__text"></text>
-            </cell>
-            <cell class="cell flex-column">
-              <heading class="cell__heading">1889 год</heading>
-              <text class="cell__text">Открытие условного рефлекса</text>
-              <text class="cell__text"></text>
-            </cell>
+            <div class="cell flex-column ">
+              <div class="cell__heading">86 миллиардов</div>
+              <div class="cell__text">Число нейронов в мозге человека</div>
+              <div class="cell__text"></div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">2,1 миллиарда</div>
+              <div class="cell__text">Число нуждающихся в повышении квалификации</div>
+              <div class="cell__text">Всемирный Банк, 2017</div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">1000 терабайт</div>
+              <div class="cell__text">Объём памяти человека</div>
+              <div class="cell__text"></div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">500 триллионов</div>
+              <div class="cell__text">Число ответственных за обучение нервных синапсов
+                у взрослого человека</div>
+              <div class="cell__text_digits"></div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">420 миллионов</div>
+              <div class="cell__text">Число взрослых людей моложе 25 лет, не имеющих образования
+                для трудоустройства</div>
+              <div class="cell__text">Всемирный Банк, 2017</div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">17-20 лет</div>
+              <div class="cell__text">Пик обучаемости</div>
+              <div class="cell__text"></div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">1885 год</div>
+              <div class="cell__text">Открытие кривой забывания</div>
+              <div class="cell__text"></div>
+            </div>
+            <div class="cell flex-column">
+              <div class="cell__heading">1889 год</div>
+              <div class="cell__text">Открытие условного рефлекса</div>
+              <div class="cell__text"></div>
+            </div>
           </div>
         </div>
       </section>
 
-    <section class="feynman">
-      <div class="feynman-main">
-        <section-title class="feynman-title">Метод Фейнмана</section-title>
-        <section-subtitle class="feynman-subtitle">Выучить и не забыть.</section-subtitle>
-        <section-info class="feynman-info"><a href="#" class="link">Подробнее ➝</a></section-info>
-        <div class="feynman-image"></div>
-      </div>
-    </section>-->
-
-    <section class="kaufman">
-      <div class="flex-column flex-center kaufman-main">
-        <section-title class="section-title-style">
-          <p>Принципы обучения</p>
-        </section-title>
-        <section-subtitle class="section-subtitle-style">
-          <p>от Джоша Кайфмана</p>
-        </section-subtitle>
-        <div class="table-style_dark flex-row">
-          <cell class="table__cell_theme_dark flex-column ">
-            <heading class="cell__heading">1</heading>
-            <text class="cell__text">Выберите привлекательный проект.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">2</heading>
-            <text class="cell__text">Сосредоточьтесь на каком-то одном навыке.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">3</heading>
-            <text class="cell__text">Определите целевой уровень мастерства.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">4</heading>
-            <text class="cell__text">Разбейте навык на элементы.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">5</heading>
-            <text class="cell__text">Приготовьте всё необходимое для занятий.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">6</heading>
-            <text class="cell__text">Устраните препятствия для занятий.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">7</heading>
-            <text class="cell__text">Выделите специальное время для занятий.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">8</heading>
-            <text class="cell__text">Создайте быстрые петли обратной связи.</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">9</heading>
-            <text class="cell__text">Занимайтесь по расписанию,
-              короткими интенсивными интервалами</text>
-          </cell>
-          <cell class="table__cell_theme_dark flex-column">
-            <heading class="cell__heading">10</heading>
-            <text class="cell__text">Уделяйте внимание количеству и скорости</text>
-            <div class="kaufman-triangle"></div>
-          </cell>
+      <section class="feynman">
+        <div class="feynman__main">
+          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+          <p class="feynman__info"><a href="#" class="link">Подробнее ➝</a></p>
+          <div class="feynman__image"></div>
         </div>
-      </div>
-    </section>
+      </section>
+
+      <section class="kaufman">
+        <div class="kaufman__triangle"></div>
+        <div class="flex-column kaufman__main">
+          <h1 class="section-title-style">Принципы обучения</h1>
+          <h2 class="section-subtitle-style">от Джоша Кайфмана</h2>
+          <div class="kaufman__table_style_dark flex-row">
+            <div class="kaufman__cell_theme_dark flex-column ">
+              <div class="cell__heading">1</div>
+              <div class="cell__text">Выберите привлекательный проект.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">2</div>
+              <div class="cell__text">Сосредоточьтесь на каком-то одном навыке.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">3</div>
+              <div class="cell__text">Определите целевой уровень мастерства.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">4</div>
+              <div class="cell__text">Разбейте навык на элементы.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">5</div>
+              <div class="cell__text">Приготовьте всё необходимое для занятий.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">6</div>
+              <div class="cell__text">Устраните препятствия для занятий.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">7</div>
+              <div class="cell__text">Выделите специальное время для занятий.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">8</div>
+              <div class="cell__text">Создайте быстрые петли обратной связи.</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">9</div>
+              <div class="cell__text">Занимайтесь по расписанию,
+                короткими интенсивными интервалами</div>
+            </div>
+            <div class="kaufman__cell_theme_dark flex-column">
+              <div class="cell__heading">10</div>
+              <div class="cell__text">Уделяйте внимание количеству и скорости</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <!--<footer class="footer">
+    <footer class="footer">
       <div class="flex-row  footer__main">
         <div class="flex-column footer__main_left">
           <div class="footer__logo"></div>
@@ -174,7 +172,7 @@
         <div class="flex-row footer__main_right">
           <div class="flex-column">
             <nav>
-              <title__footer class="title__footer">О Практикуме</title__footer>
+              <h3 class="title__footer">О Практикуме</h3>
               <ul class="text-style-2 no-bullets">
                 <li><a href="#" class="footer__link">Главная</a></li>
                 <li><a href="#" class="footer__link">Концепция</a></li>
@@ -184,20 +182,20 @@
           </div>
           <div class="flex-column"></div>
           <nav>
-            <title__footer class="title__footer">Соцсети</title__footer>
+            <h3 class="title__footer">Соцсети</h3>
             <ul class="text-style-2 no-bullets">
               <li><a href="#" class="footer__link"><img src="images/facebook_color_white.svg"
-                    class="footer-image-overlay" /> Facebook</a></li>
+                    class="footer__image_overlay" /> Facebook</a></li>
               <li><a href="#" class="footer__link"><img src="images/vk_color_white.svg" class="footer-image-overlay" />
                   Вконтакте</a></li>
               <li><a href="#" class="footer__link"><img src="images/instagram_color_white.svg"
-                    class="footer-image-overlay" /> Instagram</a></li>
+                    class="footer__image_overlay" /> Instagram</a></li>
             </ul>
           </nav>
         </div>
       </div>
   </div>
-  </footer>-->
+  </footer>
   </div>
 </body>
 
